# adpl

./: Cargo.toml
crates/arena/: Cargo.toml
crates/arena/src/: arena.rs  index.rs  interned.rs  lib.rs  list.rs  option.rs
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  lib.rs
crates/ast_lowering/: Cargo.toml
crates/ast_lowering/src/: errors.rs  lib.rs  lowering.rs
crates/hir/: Cargo.toml
crates/hir/src/: context.rs  hir.rs  lib.rs
crates/lex/: Cargo.toml
crates/lex/src/: lib.rs
crates/parse/: Cargo.toml
crates/parse/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: diagnostics.rs  lib.rs  stack.rs
src/: cli.rs  errors.rs  lib.rs  main.rs
tools/vscode/: README.md  package.json
tools/vscode/syntaxes/: adpl.tmLanguage.json
