[package]
name = "adpl"
version.workspace = true
edition.workspace = true

[dependencies]
argh.workspace = true

adpl-lex.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
argh = "0.1"
logos = "0.15"

adpl-lex = { path = "crates/lex" }
