[package]
name = "adpl"
version.workspace = true
edition.workspace = true

[dependencies]
argh.workspace = true

adpl-ast.workspace = true
adpl-lex.workspace = true
adpl-parse.workspace = true
adpl-util.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
argh = "0.1"
chumsky = { version = "0.10", features = ["pratt"] }
codespan-reporting = "0.11"
logos = "0.15"
symbol_table = { version = "0.4", features = ["global"] }

adpl-ast = { path = "crates/ast" }
adpl-lex = { path = "crates/lex" }
adpl-parse = { path = "crates/parse" }
adpl-util = { path = "crates/util" }
